# ddm501-lab3-starter

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: cd.yml  ci.yml
app/: __init__.py  config.py  main.py  model.py  schemas.py
models/: .gitkeep
scripts/: train_model.py
tests/: __init__.py  conftest.py
tests/integration/: test_api.py
tests/model/: __init__.py  test_model_behavior.py
tests/unit/: test_model.py  test_schemas.py
